# OpenGL

./: .gitignore  CMakeLists.txt  imgui.ini  main.cpp  注释
res/: Basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Render.cpp  Render.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/tests/: Test.cpp  Test.h  TestBatchRender.cpp  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
